consistent use of fetch and added ReadMe
